[tool.poetry]
name = "forest-marathon"
version = "0.1.0"
description = ""
authors = ["Nourdine <noureddinebentaher20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
geoalchemy2 = "^0.16.0"
asyncpg = "^0.30.0"
pydantic-extra-types = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
